--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,72 @@
-<p>footer works!</p>
+<footer class="page-footer font-small mdb-color darken-4 pt-4">
+
+  <div class="container">
+
+    <div class="row text-center justify-content-center pt-5 mb-3">
+
+      <div class="col-md-2 mb-3">
+        <h6 class="text-uppercase font-weight-bold">
+          <a href="#!">About</a>
+        </h6>
+      </div>
+
+      <div class="col-md-2 mb-3">
+        <h6 class="text-uppercase font-wigth-bold">
+          <a href="#!">Proyectos</a>
+        </h6>
+      </div>
+
+      <div class="col-md-2 mb-3">
+        <h6 class="text-uppercase font-weight-bold">
+          <a href="htps://thisisprogrammingworld.blogspot.com">Blog</a>
+        </h6>
+      </div>
+
+    </div>
+
+    <hr class="rgba-white-light" style="margin: 0 15%;">
+
+    <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
+
+      <div class="col-md-8 col-12 mt-5">
+        <p style="line-height: 0.7rem; font-size: 30px;">Have a good day!</p> <br>
+        <p style="font-size: 1.2rem;"> Email: matymoyano4@gmail.com </p>
+      </div>
+
+    </div>
+
+    <hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">
+
+    <div class="row pb-3">
+
+      <div class="col-md-12">
+
+        <div class="mb-5 flex-center">
+          <a class="fb-ic">
+            <i class="fa fa-facebook fa-lg white-text mr-4" href="https://facebook.com/sahilverma1910/"> </i>
+          </a>
+          <a class="tw-ic">
+            <i class="fa fa-twitter fa-lg white-text mr-4" href="https://twitter.com/iamsahil1910"> </i>
+          </a>
+          <a class="gplus-ic">
+            <i class="fa fa-google-plus fa-lg white-text mr-4" href="https://plus.google.com/102195199124435190083"> </i>
+          </a>
+          <a class="li-ic">
+            <i class="fa fa-linkedin fa-lg white-text mr-4" href="https://www.linkedin.com/in/iamsahil1910"> </i>
+          </a>
+          <a class="pin-github">
+            <i class="fa fa-github fa-lg white-text" href="https://github.com/iamsahil1910/"> </i>
+          </a>
+        </div>
+
+      </div>
+
+    </div>
+
+  </div>
+
+  <div class="footer-copyright text-center py-5">
+    <h6>Moyano Matías Agustín</h6>
+  </div>
+
+</footer>
