Commit #04, edit footer and initializing home

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -12,7 +12,7 @@
 
       <div class="col-md-2 mb-3">
         <h6 class="text-uppercase font-wigth-bold">
-          <a href="#!">Proyectos</a>
+          <a href="#!">My Work</a>
         </h6>
       </div>
 
@@ -29,7 +29,8 @@
     <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
 
       <div class="col-md-8 col-12 mt-5">
-        <p style="line-height: 0.7rem; font-size: 30px;">Have a good day!</p> <br>
+        <p style="line-height: 0.7rem; font-size: 30px;">"El diseño no es solo lo que se ve. El diseño es cómo funciona."</p> <br>
+        <p style="line-height: 0.7rem; font-size: 30px;">- Steve Jobs -</p> <br>
         <p style="font-size: 1.2rem;"> Email: matymoyano4@gmail.com </p>
       </div>
 
@@ -41,7 +42,7 @@
 
       <div class="col-md-12">
 
-        <div class="mb-5 flex-center">
+        <div class="mb-5 flex-center iconos">
           <a class="fb-ic">
             <i class="fa fa-facebook fa-lg white-text mr-4" href="https://facebook.com/sahilverma1910/"> </i>
           </a>
