--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,26 @@
-<p>home works!</p>
+<section>
+
+  <div class="body">
+
+    <div class="container">
+
+      <div class="column">
+
+        <h1 class="title">
+          Software Developer, Frontend & Backend
+        </h1>
+
+        <h4 class="subtitle">
+          I like to write code, design pages or apps and keep learning about it.
+        </h4>
+
+
+        <img class="avatar" src="../../../assets/avatar.png">
+
+      </div>
+
+    </div>
+
+  </div>
+
+</section>
